2003-06-08  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/metacity-1/metacity-theme-1.xml
	* Gorilla/metacity-1/wm-close.svg
	* Gorilla/metacity-1/wm-max.svg
	* Gorilla/metacity-1/wm-menu.svg
	* Gorilla/metacity-1/wm-min.svg
	* Gorilla/metacity-1/wm-restore.svg: adding Gorilla metacity theme. gotta 
     add autotools files

2003-06-05 Christian Schaller <Uraeus@gnome.org>
	* Commited many updated icons from David Vignoni to Nuvola

2003-06-05 Christian Schaller <Uraeus@gnome.org>
	* Commited a couple of improved icons for Nuvola
	* Commited some fixes to Lush metacity theme, still needin love

2003-05-26  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * configure.in: Added Spanish (es) to ALL_LINGUAS.

2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-05-16 Christian Schaller <Uraeus@gnome.org>
	* Add stock icons to Lush theme
	* Add Smooth-Lush gtk theme
	* Add Lush-Galaxy metacity theme (alpha version)
	* Add license file for Wasp icons
	* Some minor bugfixes

2003-05-14  Jakub Steiner <jimmac@ximian.com>

   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-readme.svg:
   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-patch.svg:
   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-sql.svg:
   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-copying.svg:
   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-sh.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-x-kpresenter.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-x-kword.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-x-kspread.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-x-killustrator.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-vnd.ms-powerpoint.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-troff-man.svg:
	* Gorilla/icons/scalable/mimetypes/gnome-mime-application-x-backup.svg: