@@ -1,0 +1,11 @@
+themedir = $(datadir)/themes/Gorilla/metacity-1
+
+theme_DATA=  \
+metacity-theme-1.xml \
+wm-close.svg \
+wm-max.svg \
+wm-menu.svg \
+wm-min.svg \
+wm-restore.svg 
+
+EXTRA_DIST = $(theme_DATA)
