@@ -63,6 +63,7 @@ Gorilla/icons/scalable/devices/Makefile
 Gorilla/icons/scalable/emblems/Makefile
 Gorilla/icons/scalable/filesystems/Makefile
 Gorilla/icons/scalable/mimetypes/Makefile
+Gorilla/metacity-1/Makefile
 Nuvola/Makefile
 Nuvola/gtk-2.0/Makefile
 Nuvola/gtk-2.0/iconrc
